--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -64,3 +64,6 @@
   margin-left: -1em;
   font-weight: 700;
 }
+#VPSidebarNav > div:nth-child(4) > section > div > div > div > a > p:hover {
+  color: var(--vp-c-brand-1);
+}
